--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,24 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:gravity="center"
+
     android:weightSum="100"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Welcome!"
+        android:textAlignment="center"
+        android:layout_marginVertical="40dp"
+        android:layout_marginBottom="40dp"
+        android:textSize="80dp">
+    </TextView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="35"
+        android:layout_marginTop="23dp"
         android:weightSum="100"
 
         android:orientation="vertical">
@@ -20,12 +29,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_gravity="top"
-            android:layout_weight="40"
+            android:layout_weight="25"
 
             android:text="Set Limits"
             android:textAlignment="center"
-            android:textSize="70dp"
-            android:layout_height="70dp"
+            android:textSize="40dp"
+            android:layout_height="45dp"
             tools:ignore="RtlCompat"></TextView>
 
         <LinearLayout
@@ -99,12 +108,27 @@
         android:layout_height="wrap_content"
         android:layout_weight="20"
         android:gravity="center">
-       <Button
+
+
+        <Button
         android:id="@+id/rtg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+            android:textSize="30dp"
            android:layout_marginVertical="5dp"
         android:text="Rating 0-9" />
 
    </LinearLayout>
+    <Button
+        android:id="@+id/hst"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="8dp"
+        android:layout_gravity="center"
+        android:layout_marginVertical="5dp"
+
+        android:text="View Rating History" />
+
+
 </LinearLayout>
